style.css
/* ... */
#chatcontrols .toggle {
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  margin: 6px auto auto;
}

#chatcontrols .expand {
  border-bottom: 10px solid #FFCE00;
}

#chatcontrols .shrink {
  border-top: 10px solid #FFCE00;
}


#chat {
  position: absolute;
  width: 708px;
  bottom: 23px;
  left: 0;
  z-index: 3000;
  background: rgba(8, 48, 78, 0.9);
  font-size: 12.6px;
  color: #eee;
  border: 1px solid #20A8B1;
  border-bottom: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

em {
  color: red;
  font-style: normal;
}

#chat.expand {
  height:auto;
  top: 25px;
}

#chatpublic, #chatfull, #chatcompact {
  display: none;
}

#chat > div {
  overflow-x:hidden;
  overflow-y:scroll;
  height: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 2px;
  position:relative;
}

#chat table, #chatinput table {
  width: 100%;
  table-layout: fixed;
  border-spacing: 0m;
  border-collapse: collapse;
}

#chatinput table {
  height: 100%;
}

#chat td, #chatinput td {
  font-family: Verdana, sans-serif;
  font-size: 12.6px;
  vertical-align: top;
  padding-bottom: 3px;
}

/* time */
#chat td:first-child, #chatinput td:first-child {
  width: 44px;
  overflow: hidden;
  padding-left: 2px;
  color: #bbb;
  white-space: nowrap;
}

#chat time {
  cursor: help;
}

/* nick */
#chat td:nth-child(2), #chatinput td:nth-child(2) {
  width: 91px;
  overflow: hidden;
  padding-left: 2px;
  white-space: nowrap;
}

mark {
  background: transparent;
}

.invisep {
  display: inline-block;
  width: 1px;
  height: 1px;
  overflow:hidden;
  color: transparent;
}

/* divider */
summary {
  color: #bbb;
  display: inline-block;
  font-family: Verdana,sans-serif;
  height: 16px;
  overflow: hidden;
  padding: 0 2px;
  white-space: nowrap;
  width: 100%;
}

#chatinput {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 0 2px;
  background: rgba(8, 48, 78, 0.9);
  width: 708px;
  border: 1px solid #20A8B1;
  z-index: 3001;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

#chatinput td {
  padding-bottom: 1px;
  vertical-align: middle;
}


#chatinput input {
  background: transparent;
  font-size: 12.6px;
  font-family: Verdana,sans-serif;
  color: #EEEEEE;
  width: 100%;
  height: 100%;
}



/* sidebar ************************************************************/

#sidebar > * {
  border-bottom: 1px solid #20A8B1;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}



#sidebartoggle .toggle {
  border-bottom: 10px solid transparent;
  border-top: 10px solid transparent;
}

#sidebartoggle .open {
  border-right: 10px solid #FFCE00;
}

#sidebartoggle .close {
  border-left: 10px solid #FFCE00;
}

/* player stats */
#playerstat {
  height: 30px;
}

h2 {
  color: #ffce00;
  font-size: 21px;
  padding: 0 4px;
  margin: 0;
  cursor:help;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
}

h2 #name {
  display: inline-block;
  overflow: hidden;
  text-overflow: "~";
  vertical-align: top;
  white-space: nowrap;
  width: 205px;
  position: relative;
}

h2 #stats {
  float: right;
  height: 100%;
  overflow: hidden;
}

h2 #signout {
  font-size: 12px;
  font-weight: normal;
  line-height: 29px;
  padding: 0 4px;
  position: absolute;
  top: 0;
  right: 0;
  background-color: rgba(8, 48, 78, 0.5);
  display: none; /* starts hidden */
}

h2 sup, h2 sub {
  display: block;
  font-size: 11px;
  margin-bottom: -2px;
}


/* gamestats */
#gamestat {
  height: 22px;
}

#gamestat span {
  display: block;
  float: left;
  font-weight: bold;
  cursor:help;
  height: 21px;
  line-height: 22px;
}

#gamestat .res {
  background: #005684;
  text-align: right;
}

#gamestat .enl {
  background: #017f01;
}


/* geosearch input, and others */
input {
  background-color: rgba(0, 0, 0, 0.3);
  color: #ffce00;
  height: 24px;
  padding:0px 4px 0px 4px;
  font-size: 12px;
  border:0;
  font-family:inherit;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

::-webkit-input-placeholder {
  font-style: italic;
}

:-moz-placeholder {
  font-style: italic;
}

::-moz-placeholder {
  font-style: italic;
}

.leaflet-control-layers input {
  height: auto;
  padding: 0;
}


/* portal title and image */
h3 {
  font-size: 16px;
  padding: 0 4px;
  margin:0;
  height: 23px;
  width: 100%;
  overflow:hidden;
  text-overflow: "~";
  white-space: nowrap;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.imgpreview {
  height: 190px;
  background: no-repeat center center;
  background-size: contain;
  cursor: help;
  overflow: hidden;
}

.imgpreview img.hide {
  display: none;
}

#level {
  font-size: 40px;
  text-shadow: -1px -1px #000, 1px -1px #000, -1px 1px #000, 1px 1px #000, 0 0 5px #fff;
  display: block;
  margin-right: 15px;
  text-align:right;
}

/* portal mods */
.mods {
  margin: 3px auto 1px auto;
  width: 296px;
  height: 67px;
  text-align: center;
}

.mods span {
  background-color: rgba(0, 0, 0, 0.3);
  /* can’t use inline-block because Webkit’s implementation is buggy and
   * introduces additional margins in random cases. No clear necessary,
   * as that’s solved by setting height on .mods. */
  display: block;
  float:left;
  height: 63px;
  margin: 0 2px;
  overflow: hidden;
  padding: 2px;
  text-align: center;
  width: 63px;
  cursor:help;
  border: 1px solid #666;
}

.mods span:not([title]) {
  cursor: auto;
}

.res .mods span, .res .meter {
  border: 1px solid #0076b6;
}
.enl .mods span, .enl .meter {
  border: 1px solid #017f01;
}
/* ... */

